# auction-system

./: README.md  docker-compose.yml  init-mongo.js  package-lock.json
client/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
client/src/: App.css  App.jsx  AuctionSystem.jsx  Barang.jsx  Dashboard.jsx  Login.jsx  Register.jsx  TestSocket.jsx  main.jsx
seeder/: Dockerfile
seeder/sample-data/data/1-users/: users.js
seeder/sample-data/data/2-categories/: categories.js
seeder/sample-data/data/3-items/: items.js
server/: .env.dev  .gitignore  Dockerfile.bak  pyproject.toml
server/app/: main.py
server/app/api/: router.py
server/app/api/v1/: router.py
server/app/api/v1/routes/: auth.py  bid.py  item.py  user.py
server/app/core/: config.py  db.py  redis.py
server/app/models/: __init__.py  auth.py  bid.py  item.py  user.py
server/app/services/: auth.py  item.py  user.py
server/app/utils/: auth.py
server/app/ws/: auction.py  bidhub.py
server/tests/: test_auth.py  test_item.py  test_user.py
