[tool.poetry]
name = "auction-system-api"
version = "0.1.0"
description = ""
authors = ["Muhammad Nizar <mnizarzr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"
aioredis = "^2.0.1"
beanie = "^1.11"
motor = "^2.5"
email-validator = "^1.2.1"
bcrypt = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
