[tool.poetry]
name = "auction-system-api"
version = "0.1.0"
description = ""
authors = ["Muhammad Nizar <mnizarzr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.77.1"
uvicorn = "^0.17.6"
aioredis = "^2.0.1"
email-validator = "^1.2.1"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
beanie = {version = "^1.11.0", extras = ["motor"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
