[tool.poetry]
name = "auction-system-api"
version = "0.1.0"
description = ""
authors = ["Muhammad Nizar <mnizarzr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.77.1"
uvicorn = "^0.17.6"
redis = {version = "^4.3.4", extras = ["hiredis"]}
email-validator = "^1.2.1"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
beanie = {version = "^1.11.0", extras = ["motor"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.5"
aiofiles = "^0.8.0"
python-socketio = "^5.7.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = {version = "^7.1.2", extras = ["requests"]}
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
